Quote >. Also change font and line height of icon area

--- a/textarea_style.css
+++ b/textarea_style.css
@@ -73,6 +73,9 @@
 }
 
 #textarea-icon-group .btn-group .btn{
+  font-family: 'Times New Roman';
+  font-size: 15px;
+  line-height: 1.2;	
   background-color: #fbfbfb;
   border-radius: 0px;
   border: 1px solid rgba(200,150,200, 0.4);
