change background, border, font color etc. of pre and code. Esp. since code is dispalyed in red, which is very annoying to the eyes

--- a/blog_style.css
+++ b/blog_style.css
@@ -133,3 +133,14 @@ body{
 	font-size: 14px;
 	font-family:  "Palatino Linotype", garamond, serif; /*georgia*/
 }
+
+/* Rewrite bootstrap style for pre and code - esp. red color for code is not good */
+pre {
+    background-color: #f7f7f7;
+	border: 0px;
+}
+
+code {	
+    background-color: #f7f7f7;
+	color: black;
+}
