--- a/textarea_style.css
+++ b/textarea_style.css
@@ -19,6 +19,31 @@
 	}
 }
 
+#draw-area {
+	width: 100%;
+	height: 30px;
+	background-color: #fff7e5;
+	margin: 2px 0;
+	padding-left: 5px;
+	padding-right: 12px;
+
+	font-size: 12px;
+	line-height: 2;
+}
+
+#draw-url-input {
+   margin-right: 5px;
+   height: 22px;
+   width: 200px;
+   margin-top: 3px;
+}
+
+#data-url-btn {
+	font-size: 10px;
+	margin-right: 12px;
+	background-color: #eee;
+}
+
 #text-disp-div {
     margin-top: 10px;
     padding: 4px 6px 4px 6px;
