on click close button hide the draw area: pure javascript

--- a/textarea_style.css
+++ b/textarea_style.css
@@ -44,6 +44,10 @@
 	background-color: #eee;
 }
 
+.disabled {
+	display: none;
+}
+
 #text-disp-div {
     margin-top: 10px;
     padding: 4px 6px 4px 6px;
